--- a/MeetAppWeb/src/css/App.css
+++ b/MeetAppWeb/src/css/App.css
@@ -4,12 +4,13 @@
 
 .navBar{
     padding: 10px;
-    padding-left: 12rem;
-    padding-right: 12rem;
     max-width: 100%;
     height: 45px;
     font-size: 16px;
     font-weight: 500;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     background-color: #ffffff;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
     
@@ -93,7 +94,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-around;
+    justify-content:flex-start;
 }
 .navbarLogo{
     display: flex;
@@ -123,6 +124,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin-left: 5rem;
 }
 .searchBarDiv:hover{
     border: 1.5px solid #00798A;
@@ -166,6 +168,7 @@
 }
 
 .homeLocationDiv{
+    margin-left: 3rem;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -205,7 +208,7 @@
     margin-top: 3rem;
 }
 .homeCatSliderDiv{
-    margin-top: 2rem;
+    margin-top: 3rem;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -215,7 +218,7 @@
     color: #000000;
     font-size: 24px;
     font-weight: 500;
-    font-style: italic;
+    font-family:"Funnel Display" , sans-serif;
 }
 .homeCatHeader:hover{
     color: #00798A;
@@ -241,6 +244,9 @@
 .catSliderIcon{
     font-size: 16px;
     color: #5f5f5f;
+}
+.homeEventsDiv{
+    margin-top: 2rem;
 }
 
 
@@ -414,6 +420,199 @@
     margin-bottom: 20px;
 }
 
+
+/* Event Cards */
+
+
+
+.homeEventCardsDiv{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+}
+.eventCardDiv{
+    cursor: pointer;
+    border-radius: 8px;
+    display: flex;
+    flex-direction: row;
+    max-width: 520px;
+    height: 240px;
+    margin-left: 1.5rem;
+    margin-top: 3rem;
+    box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
+}
+.eventCardDiv:hover{
+   box-shadow: rgba(14, 100, 137, 0.341) 0px 4px 6px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
+}
+.eventCardTextDiv{
+    height: 240px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+}
+.eventCardHeader{
+    margin: 5px;
+    font-size: 20px;
+    font-family: "Sour Gummy",sans-serif;
+    color: #014750;
+}
+.eventCardDesc{
+    font-size: 14px;
+    font-weight: 500;
+    font-family: "Funnel Display" , sans-serif;
+    color: #212121;
+}
+.eventCardTime{
+    color: #5f5f5f;
+    font-size: 14px;
+    margin-left: 5px;
+}
+.eventCardTimeIcon{
+    width: 12px;
+    height: 12px;
+    color: #014750;
+
+}
+
+
+/* banner */
+.bannerTextDiv{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+}
+.bannerHeader{
+    font-size: 48px;
+    font-family: "Sour Gummy",sans-serif;
+    color: #014d57;
+}
+.bannerSpan{
+    font-size: 18px;
+    font-family: "Funnel Display",sans-serif;
+    font-weight: 400;
+    line-height: 2rem;
+}
+.bannerButton{
+    margin-top: 2rem;
+    text-decoration: none;
+    width: 150px;
+    height: 90px;
+    background-color: #00798A;
+    border: none;
+    cursor: pointer;
+    text-align: center;
+    font-size: 14px;    
+    font-weight: 500;
+    font-family: "Funnel Display" , sans-serif;
+    height: 32px;
+    border-radius: 8px;
+    color: #ffffff;
+}
+.bannerButton:hover{
+    background-color: #028b9d;
+}   
+
+
+/* Ticket */
+.ticketMainDiv{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    max-width: 600px;
+    height: 60px;
+    border: 1px solid lightgray;
+    border-radius: 8px;
+    margin: 1rem;
+    text-overflow: hidden;
+}
+.ticketMainDiv:hover{
+    box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
+}
+.ticketInnerDiv{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 80px;
+    background-color: #014750;
+    border-top-left-radius: 8px;
+    border-bottom-left-radius: 8px;
+}
+.ticketInnerSpan{
+    color: #F2F9F9;
+    font-size: 12px;
+}
+.ticketHeaderDiv{
+    padding: 4px;
+    margin-left: 2rem;
+    display: flex;
+    flex-direction: column;
+    height: 60px;
+    max-width: fit-content;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    
+}
+.ticketHeader{
+    font-size: 20px;
+    font-weight: 500;
+    font-family: "Funnel Display" , sans-serif;
+    color: #015c68;
+}
+
+.ticketHourDiv{
+    display: flex;
+    align-items: center;
+}
+.ticketHour{
+    margin-left: 2px;
+    font-size: 16px;
+    color:#5f5f5f;
+}
+.ticketOnSaleDiv{
+    margin: 8px 4px 4px 1rem; /*top-right-bottom-left*/
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 60px;
+    height: 20px;
+    background-color: #1BAB1E;
+    color: #ffff;
+    border-radius: 12px;
+}
+.ticketOnSale{
+    font-size: 12px;
+    font-family: monospace,sans-serif;
+}
+.ticketLocation{
+    font-size: 16px;
+    margin-left: 1rem;
+    color:#5f5f5f;
+}
+
+
+/* EventPage eventsByCat*/
+
+.categoryEventCardsDiv{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: flex-start;
+}
+
+
+
+
+
+
 /* Responsive */
 
 @media screen and (max-width:480px){
@@ -460,8 +659,8 @@
 
 
 .homeSloganSlider {
-    width: 680px;
-    height: 280px;
+    width: 800px;
+    height: 400px;
 }
 
 .homeCatSlider{
@@ -480,15 +679,42 @@
     align-items: center;
 }
   
-.swiper-slide img {
+.swiper-slide {
     display: block;
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: fill;
+}
+.imgContainerDiv{
+    width: 800px;
+    height: 300px;
+}
+.imgSliderDiv{
+    display: flex;
+    flex-direction: column;
+    box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
+    border-top-left-radius: 12px;
+    border-top-right-radius: 12px;
+}
+.imgSliderHeader{
+    text-decoration: none;
+    color: #015c68;
+    font-size: 20px;
+    font-family: "Sour Gummy",sans-serif;   
+}
+.imgSliderDesc{
+    color: #2a2a2a;
+    margin-top: 4px;
+    font-size: 16px;
+    font-family: "Funnel Display",sans-serif;
 }
 
-.sliderImg{
-    border-radius: 12px;
+.imgSliderTextDiv{
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    padding: 5px;
+    flex-direction: column;
 }
 
 
